--- a/AUTOMAX-main/editperfil.html
+++ b/AUTOMAX-main/editperfil.html
@@ -16,6 +16,7 @@
         <input type="text" name="nome_completo" id="nome_completo" class="info1" placeholder="NOME COMPLETO">
         <input type="text" name="email" id="email" class="info1" placeholder="EMAIL">
         <input type="text" name="senha1" id="senha1" class="info1"  placeholder="SENHA">
+        <input type="number" name="senha1" id="senha1" class="info1"  placeholder="SENHA DE COMPRA">
         <a href="menugeral.html">
         <button style="background-color: white; border-radius: 20px;     font-family: 'Poppins', sans-serif;
         ; width: 200px; font-size: 1em; transform: translateX(70px); border: none; height: 50px; font-size: 20px; margin-top: 20px;">SALVAR</button>
