--- a/AUTOMAX-main/menugeral.html
+++ b/AUTOMAX-main/menugeral.html
@@ -10,9 +10,13 @@
 <body>
     <div class="image-container">
         <a href="editperfil.html">
-        <img src="user.png" alt="Imagem" class="rounded-image">
+        <img src="user.png" alt="Perfil" class="rounded-image">
     </a>
       </div>
+      <a href="home01.html">
+        <img src="iconout.png" alt="Sair da conta" id="log">
+      </a>
+
     <p id="username">Oi, <br> usário 01!</p>
     <br>
     <div id="promo">
@@ -28,6 +32,10 @@
     <div class="circlepromo" id="circlepromo3"><button class="marca"></button></div>
     </div>
     <a href="detalhes.html" style="color:white; text-decoration: none;">
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
     <div id="promo1">
         <h2 style="font-size: 2em; margin: 10px;">ONIX PLUS <br> 2023</h2>
