--- a/AUTOMAX-main/pagamento.html
+++ b/AUTOMAX-main/pagamento.html
@@ -17,7 +17,7 @@
         <h5>SELECIONE O MEIO QUE DESEJA USAR</h5>
 
     <div>
-    <a href="pagamentocf.html">
+    <a href="cartao.html">
     <input type="button" value="CARTÃO DE CRÉDITO" class="formpag">
     </a>
     <div>
@@ -32,7 +32,7 @@
     <br>
 
     <div>
-    <a href="pagamentocf.html">
+    <a href="pix.html">
     <input type="button" value="PIX" class="formpag">
     </a>
     </div>
