--- a/AUTOMAX-main/pix.html
+++ b/AUTOMAX-main/pix.html
@@ -7,25 +7,32 @@
     <link rel="stylesheet" href="AUTOMAX.css">
     <title>PAGAMENTO VIA PIX</title>
 </head>
-<div class="centralizer03">
 <body>
-    <h1>PIX</h1>
-    <h3>USE O NOSSO QR <br> CODE OU COPIE A CHAVE PIX</h3>
+    <a href="pagamento.html"><button class="voltar"></button></a>
+
+<div class="centralizer03">
+    <h1 id="pixt">PIX</h1>
+    <h4>USE O NOSSO QR <br> CODE OU COPIE A CHAVE PIX</h4>
 
 <div>
-    <img src="PIX.png" alt="qr code" style="width: 260px;">
+    <img src="PIX.png" alt="qr code" style="width: 180PX;">
 </div>
 <br>
 <div id="cod">
   <p style="font-size: 0.9em;">483625204000098632BR5AUTOMAX</p>
 </div>
 <br>
-
+<a href="pagamentocf.html">
+    <button style="background-color: rgb(255, 255, 255); border-radius: 20px; font-family: 'Poppins', sans-serif; width: 250px; 
+    border: none; height: 50px; font-size: 20px; 
+    color: rgb(0, 0, 0); font-size: 1.1em;">FINALIZAR COMPRA</button>
+   </a>
 <a href="https://api.whatsapp.com/send?phone=5588982248291&text=Bom%20dia!%20Desejo%20enviar%20meu%20comprovante.">
 <button style="background-color: rgb(255, 255, 255); border-radius: 20px; font-family: 'Poppins', sans-serif; width: 250px; 
 border: none; height: 50px; font-size: 20px; 
 color: rgb(0, 0, 0); margin: 20px; font-size: 1.1em;">ENVIAR COMPROVANTE</button>
 </a>
+
 </div>
 </body>
 </html>
