--- a/AUTOMAX-main/cartao.html
+++ b/AUTOMAX-main/cartao.html
@@ -8,33 +8,27 @@
     <link rel="stylesheet" href="AUTOMAX.css">
 </head>
 <body>
+    <a href="entrega.html"><button class="voltar"></button></a>
+
     <div class="centralizer04">
     <h1>CARTÃO</h1>
     <h3>INSIRA OS DADOS NOS <br> CAMPOS ABAIXO</h3>
 
-    <label for="nome do cartão">NOME DO CARTÃO</label>
-    <br>
-    <input type="text" name="nome do cartão" id="inputcdn01" required placeholder="EX:VIRGULINO FERREIRA">
-    <br>
-    <br>
-     <label for="número do cartão">DADOS DO CARTÃO</label>
-     <br>
-    <input type="number" name="número do cartão" id="inputcdn01" required  placeholder="EX:1234 5678 9101 1123">
-    <br>
-    <br>
-    
-<div id="cdn"> 
-    <br>
-    <input name=" validade" id="inputcdn011" required placeholder="VALIDADE">
-    <br>
-    <input name="ccv" id="inputcdn011" required placeholder="CVV">
-    </div>
-    <br>
+    <input type="NCARTAO" name="NCATAO" id="inputcdn" required placeholder="NÚMERO DO CARTÃO" class="info1">
+    <BR>
+    <input type="VAL" name="VAL" id="inputcdn" required placeholder="VALIDADE" class="info1">
+    <BR>
+        <input type="VAL" name="VAL" id="inputcdn" required placeholder="CVV" class="info1">
     <a href="pagamentocf.html">
      <button style="background-color: rgb(255, 255, 255); border-radius: 20px; font-family: 'Poppins', sans-serif; width: 250px; 
      border: none; height: 50px; font-size: 20px; 
      color: rgb(0, 0, 0); margin: 20px; font-size: 1.1em;">CONFIRMAR PAGAMENTO</button>
     </a>
+    <a href="https://api.whatsapp.com/send?phone=5588982248291&text=Bom%20dia!%20Desejo%20enviar%20meu%20comprovante.">
+        <button style="background-color: rgb(255, 255, 255); border-radius: 20px; font-family: 'Poppins', sans-serif; width: 250px; 
+        border: none; height: 50px; font-size: 20px; 
+        color: rgb(0, 0, 0); margin: 0PX; font-size: 1.1em;">ENVIAR COMPROVANTE</button>
+        </a>
 </div>
 </div>
     </html>
