--- a/AUTOMAX-main/pagamento.html
+++ b/AUTOMAX-main/pagamento.html
@@ -24,7 +24,7 @@
 
     <br>
 
-    <a href="pagamentocf.html">
+    <a href="botelo.html">
     <input type="button" value="BOLETO BANCÁRIO" class="formpag">
     </a>
     </div>
